force-app/main/default/objects/PH_Assessment__c/PH_Assessment__c.object-meta.xml
<CustomObject>
    <label>PH_Assessment</label>
    <nameField>
        <displayFormat>A-{0000000}</displayFormat>
        <label>PH_Assesment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PH_Assessments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>