force-app/main/default/objects/PH_Assessment__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Associate</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>PH_Assessments</relationshipLabel>
    <relationshipName>PH_Assessments</relationshipName>
    <type>Lookup</type>
</CustomField>