force-app/main/default/objects/PH_Assessment__c/fields/InternetConnectivity__c.field-meta.xml
<CustomField>
    <fullName>InternetConnectivity__c</fullName>
    <label>Internet Connectivity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Adequate</fullName>
            </value>
            <value>
                <fullName>Weak</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>