force-app/main/default/objects/PH_Assessment__c/fields/Interview_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Interview_End_Time__c</fullName>
    <label>Interview End Time</label>
    <type>Time</type>
</CustomField>