force-app/main/default/objects/PH_Assessment__c/fields/Interview_Start__c.field-meta.xml
<CustomField>
    <fullName>Interview_Start__c</fullName>
    <label>Interview Start</label>
    <type>Time</type>
</CustomField>