force-app/main/default/objects/PH_Assessment__c/fields/InterviewDuration__c.field-meta.xml
<CustomField>
    <fullName>InterviewDuration__c</fullName>
    <defaultValue>60</defaultValue>
    <label>Interview Duration</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>