force-app/main/default/objects/PH_Assessment__c/fields/OverallPass__c.field-meta.xml
<CustomField>
    <fullName>OverallPass__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OverallPass</label>
    <type>Checkbox</type>
</CustomField>