force-app/main/default/objects/PH_Assessment__c/fields/OverallStatus__c.field-meta.xml
<CustomField>
    <fullName>OverallStatus__c</fullName>
    <formula>IF( OverallPass__c == true ,&quot;Pass&quot;, &quot;Failed&quot;)</formula>
    <label>Overall Status</label>
    <type>Text</type>
</CustomField>