force-app/main/default/objects/PH_Assessment__c/fields/Panelist__c.field-meta.xml
<CustomField>
    <fullName>Panelist__c</fullName>
    <defaultValue>&quot;Panelist One&quot;</defaultValue>
    <label>Panelist</label>
    <length>50</length>
    <type>Text</type>
</CustomField>