force-app/main/default/objects/PH_Assessment__c/fields/PanelistName__c.field-meta.xml
<CustomField>
    <fullName>PanelistName__c</fullName>
    <label>PanelistName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>