force-app/main/default/objects/PH_Assessment__c/fields/PanelRound__c.field-meta.xml
<CustomField>
    <fullName>PanelRound__c</fullName>
    <label>Panel Round</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>