force-app/main/default/objects/PH_Assessment__c/fields/RecordingConsent__c.field-meta.xml
<CustomField>
    <fullName>RecordingConsent__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Recording Consent</label>
    <type>Checkbox</type>
</CustomField>