force-app/main/default/objects/PH_Assessment__c/fields/RecordingLink__c.field-meta.xml
<CustomField>
    <fullName>RecordingLink__c</fullName>
    <label>Recording Link</label>
    <type>Url</type>
</CustomField>