force-app/main/default/objects/PH_Assessment__c/fields/Score_Total__c.field-meta.xml
<CustomField>
    <fullName>Score_Total__c</fullName>
    <label>Score Total</label>
    <summarizedField>AssessmentLineItem__c.Score__c</summarizedField>
    <summaryForeignKey>AssessmentLineItem__c.PH_Assessment__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>