force-app/main/default/objects/PH_Assessment__c/fields/TrainingTrack__c.field-meta.xml
<CustomField>
    <fullName>TrainingTrack__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Training Track</label>
    <referenceTo>PH_TrainingTrack__c</referenceTo>
    <relationshipLabel>Assessments</relationshipLabel>
    <relationshipName>Assessments</relationshipName>
    <type>Lookup</type>
</CustomField>