force-app/main/default/objects/PH_Assessment__c/recordTypes/Panel.recordType-meta.xml
<RecordType>
    <fullName>Panel</fullName>
    <active>true</active>
    <label>Panel</label>
</RecordType>