force-app/main/default/objects/PH_Assessment__c/recordTypes/QC.recordType-meta.xml
<RecordType>
    <fullName>QC</fullName>
    <active>true</active>
    <label>QC</label>
</RecordType>