force-app/main/default/objects/PH_Assessment__c/validationRules/ValidateDuration.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidateDuration</fullName>
    <active>true</active>
    <errorConditionFormula>InterviewDuration__c  &lt;= 0</errorConditionFormula>
    <errorMessage>Must be more more than 0 minutes.</errorMessage>
</ValidationRule>